test/Fail/FunSort-X-SetOmega-PropOmega.err
FunSort-X-SetOmega-PropOmega.agda:6.13-18: error: [UnequalTypes]
The types
  Propω
and
  funSort _3 Setω
are not equal
when checking that the expression A → B has type Propω
